add nano training command

--- a/notebooks/deepsparse_blogpost.ipynb
+++ b/notebooks/deepsparse_blogpost.ipynb
@@ -563,6 +563,26 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Training YOLOv5-Nano -- Pruned + Quantize"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Uncomment to train model\n",
+        "# !cd yolov5-deepsparse-blogpost/yolov5-train/ && python train.py --cfg ./models_v5.0/yolov5n.yaml \\\n",
+        "#                --recipe ../recipes/yolov5.transfer_learn_pruned_quantized.md \\\n",
+        "#                --data pistols.yaml --hyp data/hyps/hyp.scratch.yaml \\\n",
+        "#                --weights yolov5n.pt --img 416 --batch-size 64"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "qLftLrEHD1zE"
       },
