--- a/notebooks/deepsparse_blogpost.ipynb
+++ b/notebooks/deepsparse_blogpost.ipynb
@@ -58,6 +58,15 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install setuptools==59.5.0 tensorboard==2.9.1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
